# friskai-examples

./: .gitignore  README.md
examples/python/basic-langchain-agent/: .env.example  README.md  pyproject.toml
examples/python/basic-langchain-agent/src/: agent.py  callback.py  llm.py  main.py  middleware.py  prompt.py  tools.py
examples/python/basic-strands-agent/: .env.example  README.md  pyproject.toml
examples/python/basic-strands-agent/src/: agent.py  llm.py  main.py  tools.py
examples/typescript/basic-claude-agent/: .env.example  README.md  package.json
examples/typescript/basic-claude-agent/src/: agent.ts  callback.ts  llm.ts  main.ts  middleware.ts  tools.ts
examples/typescript/basic-langchain-agent/: .env.example  README.md  biome.json  package.json
examples/typescript/basic-langchain-agent/src/: llm.ts  main.ts  prompt.ts  tools.ts
